--- a/peluqueria/templates/index_prueba.html
+++ b/peluqueria/templates/index_prueba.html
@@ -80,7 +80,7 @@
         <h3>Visita Nuestras redes sociales</h3>
 
         <div>
-            <a target="_blank" href="">Instagram</a>    
+            <a target="_blank" href="https://www.youtube.com/watch?v=Ihp2eQ3yG90">Instagram</a>    
         </div>
 
         <div>
