--- a/peluqueria/templates/pagina_cortes.html
+++ b/peluqueria/templates/pagina_cortes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peluquería Rumps</title>
+    <title>Cortes</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_index.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}">
 
@@ -44,26 +44,26 @@
     <main>
         <section class="Barra_contenedor seccion">
 
-            <h2 class="encabezado-servicios">Tipos de servicios</h2>
+            <h2 class="encabezado-servicios">Cortes de cabello</h2>
                 <div class="catalogo">
                     <div class="catalogo_superior">
                         <div class="servicios">
-                            <h3>Cortes</h3>
-                            <img src="{% static 'imagenes/Corte.jpg' %}"  alt="My image">
-                            <div class="contenido-servicio">
-                                <a href="/Cortes" class="boton boton-gris">Ver más</a>
-                            </div>
-                        </div>
-                        <div class="servicios">
-                            <h3>tintes</h3>
-                            <img src="{% static 'imagenes/Tintes.jpg' %}" alt="My image">
+                            <h3>Cortes de cabello niño</h3>
+                            <img src="{% static 'imagenes/' %}"  alt="My image">
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
                         </div>
                         <div class="servicios">
-                            <h3>alisados</h3>
-                            <img src="{% static 'imagenes/Alisado.jpg' %}"  alt="My image">
+                            <h3>Cortes de cabello niña</h3>
+                            <img src="{% static 'imagenes/' %}" alt="My image">
+                            <div class="contenido-servicio">
+                                <a href="" class="boton boton-gris">Ver más</a>
+                            </div>
+                        </div>
+                        <div class="servicios">
+                            <h3>Cortes de cabello Varon</h3>
+                            <img src="{% static 'imagenes/' %}"  alt="My image">
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -71,26 +71,13 @@
                      </div>
                      <div class="catalogo_inferior">
                         <div class="servicios">
-                            <h3>Peinados</h3> 
-                            <img src="{% static 'imagenes/Peinado.jpg' %}"  alt="My image"> 
+                            <h3>Cortes de cabello Dama</h3> 
+                            <img src="{% static 'imagenes/' %}"  alt="My image"> 
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>   
                             </div>         
                         </div>
-                        <div class="servicios ">
-                            <h3>Lavados</h3> 
-                            <img src="{% static 'imagenes/Lavado.jpg' %}"  alt="My image">
-                            <div class="contenido-servicio">
-                                <a href="" class="boton boton-gris">Ver más</a>    
-                            </div>   
-                        </div>
-                        <div class="servicios">
-                            <h3>Afeitado</h3> 
-                            <img src="{% static 'imagenes/Afeitado.jpg' %}"  alt="My image">
-                            <div class="contenido-servicio">
-                                <a href="" class="boton boton-gris">Ver más</a>    
-                            </div>   
-                        </div>
+
                      </div>
             </div>
         </section>
