--- a/peluqueria/templates/index_prueba.html
+++ b/peluqueria/templates/index_prueba.html
@@ -28,9 +28,9 @@
                  </div>
                     <nav class="navegador_informacion">
                         <a href="">Quiénes somos</a>
-                        <a href="">Contacto</a>
-                        <a href="">Dirección</a>
-                        <a href="">Profesionales</a>
+                        <a href="/Contacto">Contacto</a>
+                        <a href="/">Dirección</a>
+                        <a href="/Profesionales">Profesionales</a>
                         <a href="">Todos los servicios</a>
                     </nav>
             </section>    
