--- a/users/templates/index_cliente_prueba.html
+++ b/users/templates/index_cliente_prueba.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cortes</title>
+    <title>Peluquería Rumps</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_index.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}">
 
@@ -15,20 +15,19 @@
         <div class="Barra_contenedor">
             <div class="barra_superior">
                 <nav class="navegador_superior">
-                    <a href="">Iniciar sesión</a>
-                    <a href="">Registro</a>
+                    <a href="/logout">Cerrar sesión</a>
                 </nav>
             </div>
 
             <section class="barra_inferior">
                 <div class="peluqueria">
                     <a href="/prueba">
-                     <h1>Bienvenido a la Peluquería</h1>
+                     <h1>Bienvenido a la Peluquería <b>{{request.user.username}}</b></h1>
                     </a>
                  </div>
                     <nav class="navegador_informacion">
                         <a href="">Quiénes somos</a>
-                        <a href="/Contacto">Contacto</a>
+                        <a href="">Contacto</a>
                         <a href="">Dirección</a>
                         <a href="">Profesionales</a>
                         <a href="">Todos los servicios</a>
@@ -44,26 +43,26 @@
     <main>
         <section class="Barra_contenedor seccion">
 
-            <h2 class="encabezado-servicios">Cortes de cabello</h2>
+            <h2 class="encabezado-servicios">Tipos de servicios</h2>
                 <div class="catalogo">
                     <div class="catalogo_superior">
                         <div class="servicios">
-                            <h3>Cortes de cabello niño</h3>
-                            <img src="{% static 'imagenes/' %}"  alt="My image">
+                            <h3>Cortes</h3>
+                            <img src="{% static 'imagenes/Corte.jpg' %}"  alt="My image">
+                            <div class="contenido-servicio">
+                                <a href="/Cortes" class="boton boton-gris">Ver más</a>
+                            </div>
+                        </div>
+                        <div class="servicios">
+                            <h3>tintes</h3>
+                            <img src="{% static 'imagenes/Tintes.jpg' %}" alt="My image">
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
                         </div>
                         <div class="servicios">
-                            <h3>Cortes de cabello niña</h3>
-                            <img src="{% static 'imagenes/' %}" alt="My image">
-                            <div class="contenido-servicio">
-                                <a href="" class="boton boton-gris">Ver más</a>
-                            </div>
-                        </div>
-                        <div class="servicios">
-                            <h3>Cortes de cabello Varon</h3>
-                            <img src="{% static 'imagenes/' %}"  alt="My image">
+                            <h3>alisados</h3>
+                            <img src="{% static 'imagenes/Alisado.jpg' %}"  alt="My image">
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -71,13 +70,26 @@
                      </div>
                      <div class="catalogo_inferior">
                         <div class="servicios">
-                            <h3>Cortes de cabello Dama</h3> 
-                            <img src="{% static 'imagenes/' %}"  alt="My image"> 
+                            <h3>Peinados</h3> 
+                            <img src="{% static 'imagenes/Peinado.jpg' %}"  alt="My image"> 
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>   
                             </div>         
                         </div>
-
+                        <div class="servicios ">
+                            <h3>Lavados</h3> 
+                            <img src="{% static 'imagenes/Lavado.jpg' %}"  alt="My image">
+                            <div class="contenido-servicio">
+                                <a href="" class="boton boton-gris">Ver más</a>    
+                            </div>   
+                        </div>
+                        <div class="servicios">
+                            <h3>Afeitado</h3> 
+                            <img src="{% static 'imagenes/Afeitado.jpg' %}"  alt="My image">
+                            <div class="contenido-servicio">
+                                <a href="" class="boton boton-gris">Ver más</a>    
+                            </div>   
+                        </div>
                      </div>
             </div>
         </section>
@@ -110,5 +122,4 @@
     </footer>
 
 </body>
-
 </html>
