--- a/peluqueria/templates/index_prueba.html
+++ b/peluqueria/templates/index_prueba.html
@@ -15,7 +15,7 @@
         <div class="Barra_contenedor">
             <div class="barra_superior">
                 <nav class="navegador_superior">
-                    <a href="">Iniciar sesión</a>
+                    <a href="/Login">Iniciar sesión</a>
                     <a href="">Registro</a>
                 </nav>
             </div>
