--- a/peluqueria/templates/pagina_direccion.html
+++ b/peluqueria/templates/pagina_direccion.html
@@ -30,7 +30,7 @@
                         <a href="">Quiénes somos</a>
                         <a href="/Contacto">Contacto</a>
                         <a href="">Dirección</a>
-                        <a href="/Profesionales">Profesionales</a>
+                        <a href="">Profesionales</a>
                         <a href="">Todos los servicios</a>
                     </nav>
             </section>    
@@ -41,42 +41,6 @@
     </header>
 
 
-    <main>
-        <section class="Barra_contenedor seccion">
-
-            <h2 class="encabezado-servicios">Información peluquería</h2>
-                <div class="catalogo">
-                    <div class="catalogo_superior">
- 
-
-                        <ul class="informacion_contacto">
-                            <li class="filas_contacto">Horarios Lunes - Viernes 10:00 AM - 18:00 PM Sabado y Domingo 12:00 PM - 20:00 PM</li>
-                            <br/>
-                            <li class="filas_contacto">Direccion: Avenida Los Corrales #1212 </li> 
-                            <br/>
-                            <li class="filas_contacto">Contacto fijo: 2 4444 4444</li>
-                            <br/>
-                            <li class="filas_contacto">Contacto Movil: +56 9 9999 9999 </li>
-                            <br/>
-                            <li class="filas_contacto">Email: peluqueria@gmail.com </li>
-                            <br/>
-                            <li class="filas_contacto">Whatsapp: +569 9999 9999 </li>
-                            <br/>
-                            <li class="filas_contacto">Instagram: @peluqueriaRumps </li>
-                            <br/>
-                            <li class="filas_contacto">Facebook: Peluquería_Rumps </li>
-                    
-                            <hr/>
-                    
-                            <a href="/prueba"><input type="button" value="volver" class="btn btn-info"></a>
-                        </ul>
-                     </div>
-                </div>
-        </section>
-        
-        
-
-    </main>
 
 
 
