--- a/peluqueria/templates/pagina_profesionales.html
+++ b/peluqueria/templates/pagina_profesionales.html
@@ -62,12 +62,12 @@
                                 {% for p in peluquero %}
                             
                                 <tr>
-                                    <td>{{ p.nombre }}</td>
-                                    <td>{{ p.apellido }}</td>
-                                    <td>{{ p.rubro }}</td>
-                                    <td>{{ p.telefono }}</td>
-                                    <td>{{ p.email }}</td>
-                                    <td>{{ p.horario }}</td>
+                                    <td class="fila_profesionales">{{ p.nombre }}</td>
+                                    <td class="fila_profesionales">{{ p.apellido }}</td>
+                                    <td class="fila_profesionales">{{ p.rubro }}</td>
+                                    <td class="fila_profesionales">{{ p.telefono }}</td>
+                                    <td class="fila_profesionales">{{ p.email }}</td>
+                                    <td class="fila_profesionales">{{ p.horario }}</td>
                                     
                                 </tr>
                                 
