--- a/users/templates/pagina_iniciar_sesion.html
+++ b/users/templates/pagina_iniciar_sesion.html
@@ -1,3 +1,4 @@
+{% load crispy_forms_tags  %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -30,7 +31,7 @@
                         <a href="">Quiénes somos</a>
                         <a href="/Contacto">Contacto</a>
                         <a href="">Dirección</a>
-                        <a href="/Profesionales">Profesionales</a>
+                        <a href="">Profesionales</a>
                         <a href="">Todos los servicios</a>
                     </nav>
             </section>    
@@ -42,37 +43,22 @@
 
 
     <main>
-        <section class="Barra_contenedor seccion">
 
-            <h2 class="encabezado-servicios">Información peluquería</h2>
-                <div class="catalogo">
-                    <div class="catalogo_superior">
- 
 
-                        <ul class="informacion_contacto">
-                            <li class="filas_contacto">Horarios Lunes - Viernes 10:00 AM - 18:00 PM Sabado y Domingo 12:00 PM - 20:00 PM</li>
-                            <br/>
-                            <li class="filas_contacto">Direccion: Avenida Los Corrales #1212 </li> 
-                            <br/>
-                            <li class="filas_contacto">Contacto fijo: 2 4444 4444</li>
-                            <br/>
-                            <li class="filas_contacto">Contacto Movil: +56 9 9999 9999 </li>
-                            <br/>
-                            <li class="filas_contacto">Email: peluqueria@gmail.com </li>
-                            <br/>
-                            <li class="filas_contacto">Whatsapp: +569 9999 9999 </li>
-                            <br/>
-                            <li class="filas_contacto">Instagram: @peluqueriaRumps </li>
-                            <br/>
-                            <li class="filas_contacto">Facebook: Peluquería_Rumps </li>
+        <div class="container">
+
+                <h2>Iniciar sesión Cliente</h2>
+    
+                <form method="POST">
+                    {{ form | crispy }}
+                    {% csrf_token %}
+                    <input type="submit" value="login" class="btn btn-success">
+                    <a href="/prueba"> <input type="button" value="volver" class="btn btn-info"> </a>
+    
                     
-                            <hr/>
-                    
-                            <a href="/prueba"><input type="button" value="volver" class="btn btn-info"></a>
-                        </ul>
-                     </div>
-                </div>
-        </section>
+                    </form>
+
+       </div>       
         
         
 
