--- a/peluqueria/templates/pagina_cortes.html
+++ b/peluqueria/templates/pagina_cortes.html
@@ -27,10 +27,10 @@
                     </a>
                  </div>
                     <nav class="navegador_informacion">
-                        <a href="">Quiénes somos</a>
+                        <a href="/prueba">Quiénes somos</a>
                         <a href="/Contacto">Contacto</a>
-                        <a href="">Dirección</a>
-                        <a href="">Profesionales</a>
+                        <a href="/prueba">Dirección</a>
+                        <a href="/Profesionales">Profesionales</a>
                         <a href="">Todos los servicios</a>
                     </nav>
             </section>    
@@ -49,21 +49,21 @@
                     <div class="catalogo_superior">
                         <div class="servicios">
                             <h3>Cortes de cabello niño</h3>
-                            <img src="{% static 'imagenes/' %}"  alt="My image">
+                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
                         </div>
                         <div class="servicios">
                             <h3>Cortes de cabello niña</h3>
-                            <img src="{% static 'imagenes/' %}" alt="My image">
+                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}" alt="My image">
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
                         </div>
                         <div class="servicios">
                             <h3>Cortes de cabello Varon</h3>
-                            <img src="{% static 'imagenes/' %}"  alt="My image">
+                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image">
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>
                             </div>
@@ -72,7 +72,7 @@
                      <div class="catalogo_inferior">
                         <div class="servicios">
                             <h3>Cortes de cabello Dama</h3> 
-                            <img src="{% static 'imagenes/' %}"  alt="My image"> 
+                            <img src="{% static 'imagenes/imagen_prueba.jpg' %}"  alt="My image"> 
                             <div class="contenido-servicio">
                                 <a href="" class="boton boton-gris">Ver más</a>   
                             </div>         
