--- a/peluqueria/templates/pagina_ubicacion.html
+++ b/peluqueria/templates/pagina_ubicacion.html
@@ -27,9 +27,9 @@
                     </a>
                  </div>
                     <nav class="navegador_informacion">
-                        <a href="">Quiénes somos</a>
+                        <a href="/prueba">Quiénes somos</a>
                         <a href="/Contacto">Contacto</a>
-                        <a href="/">Dirección</a>
+                        <a href="/prueba">Dirección</a>
                         <a href="/Profesionales">Profesionales</a>
                         <a href="">Todos los servicios</a>
                     </nav>
