--- a/peluqueria/templates/Editar_Perfil.html
+++ b/peluqueria/templates/Editar_Perfil.html
@@ -11,7 +11,6 @@
 
 
 </head>
-
 <body>
     
     <main class="espacio">
@@ -24,21 +23,17 @@
                     <div class="catalogo_superior">
                         <div class="diseño_login">
                             <div class="centrado"> 
-                                
                                 <form method="POST">
                                     {% csrf_token %}
-                                    <fieldset class="form-group">
-                                        <legend class="border-bottom mb-4">Borrar cuenta</legend>
-                                            <p>La cuenta se eliminará permanentemente. </p>
-                                            <p>¿Seguro que desea proceder?</p>
-                                            {{ form }}
-                                    </fieldset>
-                                    <div class="form-group">
-                                        <button type="submit">Eliminar Cuenta</button>
-                                        <a href="/prueba"><input type="button" value="volver" ></a>
-                                    </div>
-                                </form>
-                            
+                                    {{ form.as_p}}
+                                    <a href="/prueba"> <input type="button" value="volver" ></a>
+                                    <input type="submit" value="Confirmar cambios" >
+                                    
+                                    
+                                </form> 
+
+
+                
                             </div>            
                         </div>
                         
@@ -53,8 +48,6 @@
 </html>
 
 
-
-    
 
 
 
