--- a/users/templates/opcionesCuenta.html
+++ b/users/templates/opcionesCuenta.html
@@ -1,30 +1,65 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    
+  
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Peluquería Rumps</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}">
 
-<div class="container">
-    {% block contenido %}
 
-    <h2>Configuración de cuenta</h2>
+</head>
+<main class="espacio">
 
-    <hr />
-    
-    <a href="/modif">Editar perfil</a>
-    
-    <hr />
-    
-    <a href="/password">Cambiar contraseña</a>
-    
-    <hr />
-    
-    <a href="/delete">Eliminar cuenta</a>
-    
-    <hr />
-    
-    <a href="/index"><input type="button" value="volver" class="btn btn-info"></a>
-    
-    <hr />
 
-    {% endblock %}
-</div>
+    <section class="Barra_contenedor seccion">
+
+        <h2 class="encabezado-servicios"></h2>
+            <div class="catalogo">
+                <div class="catalogo_superior">
+                    <div class="diseño_login">
+                        <div class="centrado"> 
+                            
+
+                            <h2>Configuración de cuenta</h2>
+
+                            <hr />
+                            
+                            <a href="/modif">Editar perfil</a>
+                            
+                            <hr />
+                            
+                            <a href="/password">Cambiar contraseña</a>
+                            
+                            <hr />
+                            
+                            <a href="/delete">Eliminar cuenta</a>
+                            
+                            <hr />
+                            
+                            <a href="/prueba"><input type="button" value="volver" ></a>
+                            
+                            <hr />
+                      
+                                          
+                        </div>            
+                    </div>
+                    
+                 </div>
+        </div>
+    </section>
+
+    
+
+</main>
+</body>
+</html>
+
+
+
+    
 
 
 
