--- a/digitalizacion/static/css/estilos_index.css
+++ b/digitalizacion/static/css/estilos_index.css
@@ -264,3 +264,14 @@ padding-bottom: 25rem;
     border-width: 3px;
     
 }
+
+.links_perfil a{
+    color: white;
+    text-decoration: none;
+    
+}
+
+.links_perfil a:hover{
+    color: wheat;
+    
+}
