--- a/peluqueria/templates/pagina_direccion.html
+++ b/peluqueria/templates/pagina_direccion.html
@@ -15,8 +15,14 @@
         <div class="Barra_contenedor">
             <div class="barra_superior">
                 <nav class="navegador_superior">
-                    <a href="">Iniciar sesión</a>
-                    <a href="">Registro</a>
+                    {% if request.user.is_authenticated %}
+                    <a href="/logout">Cerrar sesión</a>
+                    <a href="/perfil">Perfil de Usuario</a>
+                    {% else %}   
+                    <a href="/Login">Iniciar sesión</a>
+                    <a href="registro">Registro</a> 
+                    {% endif %}
+
                 </nav>
             </div>
 
